small .yaml change, should be changed later for other stylesheets

--- a/WPIMajorTracking/app.yaml
+++ b/WPIMajorTracking/app.yaml
@@ -5,8 +5,8 @@ api_version: 1
 threadsafe: yes
 
 handlers:
-- url: /stylesheets
-  static_dir: stylesheets
+- url: /css
+  static_dir: css
 
 - url: /signup 
   script: WPIMajorTracking.app
