Adds new background image. Adds image directory.

--- a/WPIMajorTracking/app.yaml
+++ b/WPIMajorTracking/app.yaml
@@ -11,6 +11,9 @@ handlers:
 - url: /libs
   static_dir: libs
 
+- url: /images
+  static_dir: images
+
 - url: /signup
   script: WPIMajorTracking.app
   secure: always
