--- a/WPIMajorTracking/app.yaml
+++ b/WPIMajorTracking/app.yaml
@@ -14,6 +14,9 @@ handlers:
 - url: /images
   static_dir: images
 
+- url: /js
+  static_dir: js/scripts
+
 - url: /signup
   script: WPIMajorTracking.app
   secure: always
